# difftriage

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/difftriage/: __init__.py  cli.py  config.py  gitstats.py  models.py  scoring.py
tests/: test_gitstats.py  test_scoring.py
