[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "difftriage"
version = "0.2.7"
description = "PR risk gate for AI-generated code: diff scoring, test impact checks, and merge policy enforcement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DiffTriage Contributors" }]
dependencies = [
  "pyyaml>=6.0",
  "typer>=0.12.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
difftriage = "difftriage.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

